se conecta exitosamente con el backend

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,7 @@
   </div>
   <div class="w-8 m-auto">
     <h1 class="text-white">Hola Roberto!</h1>
-    <div class="card flex justify-content-center">
-      <p-button label="Check" icon="pi pi-check"></p-button>
-    </div>
+    <app-user></app-user>
     <app-footer></app-footer>
   </div>
 </div>
