Se pueden postear usuarios

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,10 @@
   <div>
     <app-nav-bar></app-nav-bar>
   </div>
-  <div class="w-8 m-auto">
+  <div class="m-auto">
     <h1 class="text-white">Hola Roberto!</h1>
-    <app-user></app-user>
-    <app-footer></app-footer>
+    <!-- <app-user></app-user> -->
+    <!-- <app-footer></app-footer> -->
+     <app-register></app-register>
   </div>
 </div>
