Se agrega servicio de Login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,5 +7,6 @@
     <!-- <app-user></app-user> -->
     <!-- <app-footer></app-footer> -->
      <app-register></app-register>
+     <app-login></app-login>
   </div>
 </div>
