--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -14,7 +14,7 @@
             <label class="block text-gray-700 text-sm font-bold mb-2" for="email">
                 Correo Electrónico
             </label>
-            <input id="email" type="email" [(ngModel)]="cliente.email" name="email"
+            <input id="email1" type="email" [(ngModel)]="cliente.email" name="email"
                 class="p-inputtext w-full py-2 px-3 rounded border border-gray-300 focus:outline-none focus:border-indigo-500"
                 required />
         </div>
