Se migro a formGroups

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,31 +1,39 @@
-<div class="bg-white shadow-md rounded p-4 mx-auto w-90">
-    <h2 class="text-2xl font-semibold mb-4">Iniciar Sesión</h2>
-    <form>
-        <div class="mb-4">
-            <label class="block text-gray-700 text-sm font-bold mb-2" for="email">
-                Correo Electrónico
-            </label>
-            <input id="email" type="email" [(ngModel)]="usuario.email" name="email"
-                class="p-inputtext w-full py-2 px-3 rounded border border-gray-300 focus:outline-none focus:border-indigo-500"
-                required />
-        </div>
+<div class="shadow-md rounded p-4 mx-auto w-90 " style="width: 90%; background: rgba(1, 1, 1, 0.8)">
+  <h2 class="text-2xl font-semibold mb-4 text-white">Iniciar Sesión</h2>
+  <form [formGroup]="usuarioForm" (ngSubmit)="onLogin()">
+    <div class="mb-4">
+      <label class="block text-white text-sm font-bold mb-2" for="email">
+        Correo Electrónico
+      </label>
+      <input id="email" type="email" formControlName="email"
+        class="p-inputtext w-full py-2 px-3 rounded border border-gray-300 focus:outline-none focus:border-indigo-500" />
+      <div *ngIf="usuarioForm.get('email')?.hasError('required') && usuarioForm.get('email')?.touched"
+        class="text-red-600">
+        Correo Electrónico es requerido.
+      </div>
+      <div *ngIf="usuarioForm.get('email')?.hasError('email') && usuarioForm.get('email')?.touched"
+        class="text-red-600">
+        Correo Electrónico no es válido.
+      </div>
+    </div>
 
-        <div class="mb-6">
-            <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
-                Contraseña
-            </label>
-            <input id="password" type="password" [(ngModel)]="usuario.password" name="password"
-                class="p-inputtext w-full py-2 px-3 rounded border border-gray-300 focus:outline-none focus:border-indigo-500"
-                required />
-        </div>
+    <div class="mb-6">
+      <label class="block text-white text-sm font-bold mb-2" for="password">
+        Contraseña
+      </label>
+      <input id="password" type="password" formControlName="password"
+        class="p-inputtext w-full py-2 px-3 rounded border border-gray-300 focus:outline-none focus:border-indigo-500" />
+      <div *ngIf="usuarioForm.get('password')?.hasError('required') && usuarioForm.get('password')?.touched"
+        class="text-red-600">
+        Contraseña es requerida.
+      </div>
+    </div>
 
-        <div class="mb-6 text-center">
-            <button type="submit"
-                class="bg-indigo-500 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                (click)="onLogin()">
-                Iniciar Sesión
-            </button>
-        </div>
-    </form>
+    <div class="mb-6 text-center">
+      <button type="submit"
+        class="bg-indigo-500 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+        Iniciar Sesión
+      </button>
+    </div>
+  </form>
 </div>
-
