--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,72 +1,95 @@
 <div class="shadow-md rounded p-4 mx-auto w-90 " style="width: 90%; background: rgba(1, 1, 1, 0.8)">
 
-    <div class="flex justify-content-evenly">
-        <h3 class="text-white border-bottom-3 pb-1 border-pink-600">CREAR CUENTA</h3>
-        <h3 class="text-white">INICIAR SESIÓN</h3>
+  <div class="flex justify-content-evenly">
+    <h3 class="text-white border-bottom-3 pb-1 border-pink-600">CREAR CUENTA</h3>
+    <h3 class="text-white">INICIAR SESIÓN</h3>
+  </div>
+
+  <div class="flex flex-column align-items-center">
+    <h4 class="text-white mb-0">COMENZÁ A SUMAR</h4>
+    <h5 class="text-center text-white mt-2 mb-6 px-3">Ingresá tus datos y comenzá a disfrutar de tus beneficios con
+      nosotros.</h5>
+  </div>
+
+  <form [formGroup]="clienteForm" (ngSubmit)="onSubmit()">
+    <div class="mb-4">
+      <input id="nombreApellido" type="text" formControlName="username"
+        class="p-inputtext w-full py-3 px-3 rounded border border-gray-300 focus:outline-none focus:border-indigo-500"
+        placeholder="Nombre y Apellido" />
+      <div *ngIf="clienteForm.get('username')?.hasError('required') && clienteForm.get('username')?.touched"
+        class="text-danger">
+        Nombre y Apellido es requerido.
+      </div>
     </div>
 
-    <div class="flex flex-column align-items-center">
-        <h4 class="text-white mb-0">COMENZÁ A SUMAR</h4>
-        <h5 class="text-center text-white mt-2 mb-6 px-3">Ingresá tus datos y comenzá a disfrutar de tus beneficios con
-            nosotros.</h5>
+    <div class="flex">
+      <div class="mb-4 w-6">
+        <p-dropdown id="genderSelect" [options]="genderList" formControlName="gender" placeholder="Género"
+          [style]="{'padding': '0.2rem 0 0.3rem 0'}">
+          <option *ngFor="let option of genderList" [value]="option">{{ option }}</option>
+        </p-dropdown>
+        <div *ngIf="clienteForm.get('gender')?.hasError('required') && clienteForm.get('gender')?.touched"
+          class="text-danger">
+          Género es requerido.
+        </div>
+      </div>
+
+      <div class="mb-4 w-6">
+        <p-calendar id="fechaNacimiento" formControlName="birthday" [showIcon]="true"
+          [inputStyle]="{'padding': '1rem 0 1rem 1rem'}"
+          class="w-full py-3 rounded border border-gray-300 focus:outline-none focus:border-indigo-500"
+          placeholder="Cumpleaños">
+        </p-calendar>
+        <div *ngIf="clienteForm.get('birthday')?.hasError('required') && clienteForm.get('birthday')?.touched"
+          class="text-danger">
+          Cumpleaños es requerido.
+        </div>
+      </div>
     </div>
 
-    <form>
-        <div class="mb-4">
-            <input id="nombreApellido" type="text" [(ngModel)]="cliente.username" name="nombreApellido"
-                class="p-inputtext w-full py-3 px-3 rounded border border-gray-300 focus:outline-none focus:border-indigo-500"
-                placeholder="Nombre y Apellido" required />
-        </div>
+    <div class="mb-4">
+      <input id="localidadDireccion" type="text" formControlName="address"
+        class="p-inputtext w-full py-3 px-3 rounded border border-gray-300 focus:outline-none focus:border-indigo-500"
+        placeholder="Localidad" />
+      <div *ngIf="clienteForm.get('address')?.hasError('required') && clienteForm.get('address')?.touched"
+        class="text-danger">
+        Localidad es requerida.
+      </div>
+    </div>
 
+    <div class="mb-4">
+      <input id="email" type="email" formControlName="email"
+        class="p-inputtext w-full py-3 px-3 rounded border border-gray-300 focus:outline-none focus:border-indigo-500"
+        placeholder="E-mail" />
+      <div *ngIf="clienteForm.get('email')?.hasError('required') && clienteForm.get('email')?.touched"
+        class="text-danger">
+        Email es requerido.
+      </div>
+      <div *ngIf="clienteForm.get('email')?.hasError('email') && clienteForm.get('email')?.touched" class="text-danger">
+        Email no es válido.
+      </div>
+    </div>
 
-        <div class="flex">
+    <div class="mb-4">
+      <input id="Password" type="password" formControlName="password"
+        class="p-inputtext w-full py-3 px-3 rounded border border-gray-300 focus:outline-none focus:border-indigo-500"
+        placeholder="Contraseña" />
+      <div *ngIf="clienteForm.get('password')?.hasError('required') && clienteForm.get('password')?.touched"
+        class="text-danger">
+        Contraseña es requerida.
+      </div>
+    </div>
 
-            <div class="mb-4 w-6">
-                <p-dropdown id="genderSelect" [options]="genderList" [(ngModel)]="cliente.gender" name="gender"
-                    placeholder="Género" [style]="{'padding': '0.2rem 0 0.3rem 0'}">
-                    <option *ngFor="let option of genderList" [value]="option">{{ option }}</option>
-                </p-dropdown>
-            </div>
-
-            <div class="mb-4 w-6">
-                <p-calendar id="fechaNacimiento" [(ngModel)]="cliente.birthday" name="fechaNacimiento" [showIcon]="true"
-                    [inputStyle]="{'padding': '1rem 0 1rem 1rem'}"
-                    class="w-full py-3 rounded border border-gray-300 focus:outline-none focus:border-indigo-500"
-                    placeholder="Cumpleaños">
-                </p-calendar>
-            </div>
-
-
-        </div>
-
-        <div class="mb-4">
-            <input id="localidadDireccion" type="text" [(ngModel)]="cliente.address" name="localidadDireccion"
-                class="p-inputtext w-full py-3 px-3 rounded border border-gray-300 focus:outline-none focus:border-indigo-500"
-                placeholder="Localidad" required />
-        </div>
-
-        <div class="mb-4">
-            <input id="email" type="email" [(ngModel)]="cliente.email" name="email"
-                class="p-inputtext w-full py-3 px-3 rounded border border-gray-300 focus:outline-none focus:border-indigo-500"
-                placeholder="E-mail" required />
-        </div>
-
-        <div class="mb-4">
-            <input id="Password" type="text" [(ngModel)]="cliente.password" name="Password"
-                class="p-inputtext w-full py-3 px-3 rounded border border-gray-300 focus:outline-none focus:border-indigo-500"
-                placeholder="Constraseña" required />
-        </div>
-
-        <div class="mt-5 mb-3 text-center">
-            <button type="submit"
-                class="bg-transparent py-2 px-4 text-gray-600 border-solid border-gray-600 border-round-3xl "
-                (click)="onSubmit()">
-                REGISTRARME
-            </button>
-        </div>
-    </form>
+    <div class="mt-5 mb-3 text-center">
+      <button type="submit"
+        class="bg-transparent py-2 px-4 text-gray-600 border-solid border-gray-600 border-round-3xl "
+        (click)="onSubmit()">
+        REGISTRARME
+      </button>
+    </div>
+  </form>
 </div>
 
 <div class="text-center text-white">
-    <h6>¿Ya tenés una cuenta? Iniciá Sesión</h6>
+  <h6>¿Ya tenés una cuenta? Iniciá Sesión</h6>
 </div>
