agregado estilos register tablet y desktop

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,9 @@
     <app-nav-bar></app-nav-bar>
   </div>
   <div class="m-auto">
-    <h1 class="text-white">Hola Roberto!</h1>
     <!-- <app-user></app-user> -->
     <!-- <app-footer></app-footer> -->
      <app-register></app-register>
-     <app-login></app-login>
+     <!-- <app-login></app-login> -->
   </div>
 </div>
