--- a/src/app/components/benefit-slider-item/benefit-slider-item.component.html
+++ b/src/app/components/benefit-slider-item/benefit-slider-item.component.html
@@ -1,1 +1,12 @@
-<p>benefit-slider-item works!</p>
+<div class="cardContainer">
+    <div class="image-container">
+        <img src="../../../assets/img/Rectangle5.png" class="cover-image" alt="">
+    </div>
+    <div class="cardText">
+        <p class="title">Titulo de la promo</p>
+    <p class="description">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur
+    </p>
+    <p class="points-req">2150 PTS.</p>
+    </div>
+</div>
