--- a/src/app/components/logo/logo.component.html
+++ b/src/app/components/logo/logo.component.html
@@ -1,1 +1,4 @@
-<p>logo works!</p>
+<div class="flex justify-content-center p-3 surface-900 custom-rounded-div">
+    <span class="text-white text-xl">Antares</span>
+</div>
+
