--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,1 @@
-<div style="height: 1333px;">
-  <div>
-    <app-nav-bar></app-nav-bar>
-  </div>
-  <div class="m-auto">
-    <h1 class="text-white">Hola Roberto!</h1>
-    <!-- <app-user></app-user> -->
-    <!-- <app-footer></app-footer> -->
-     <app-register></app-register>
-     <app-login></app-login>
-  </div>
-</div>
+<app-home></app-home>
