--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,5 +1,10 @@
-<div class="card flex justify-content-end">
-    <p-toast></p-toast>
-    <p-menu #menu [model]="items" [popup]="true"></p-menu>
-    <button pButton type="button" (click)="menu.toggle($event)" icon="pi pi-bars"></button>
+<div class="card flex justify-content-between m-2 mt-4">
+    <div>
+        <app-logo></app-logo>
+    </div>
+    <div class="justify-content-center">
+        <p-toast></p-toast>
+        <p-menu #menu [model]="items" [popup]="true"></p-menu>
+        <button pButton type="button" (click)="menu.toggle($event)" icon="pi pi-bars" class="mi-boton"></button>
+    </div>
 </div>
