agregado estilos login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <div style="height: 1333px;">
-  <div>
-    <app-nav-bar></app-nav-bar>
-  </div>
-  <div class="m-auto">
-    <!-- <app-user></app-user> -->
-    <!-- <app-footer></app-footer> -->
-     <app-register></app-register>
-     <!-- <app-login></app-login> -->
-  </div>
+    <div>
+        <!-- <app-nav-bar></app-nav-bar> -->
+    </div>
+    <div class="m-auto">
+        <!-- <app-user></app-user> -->
+        <!-- <app-footer></app-footer> -->
+        <!-- <app-register></app-register> -->
+        <app-login></app-login>
+    </div>
 </div>
