--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,20 @@
-<p>footer works!</p>
+<footer>
+    <div class="footer-container">
+        <div class="logo-container">
+            <app-logo></app-logo>
+        </div>
+        <hr>
+        <div class="social-container">
+            <div class="social">
+                <div class="text">
+                    <span>Seguinos en redes</span>
+                </div>
+                <div class="icons">
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
