--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,4 +3,5 @@
     <app-user></app-user>
     <h2 class="title">DESTACADAS</h2>
     <app-benefit-slider></app-benefit-slider>
+    <app-benefit-list></app-benefit-list>
 </div>
