--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,7 @@
     background: rgb(234,84,147);
     background: linear-gradient(0deg, rgba(234,84,147,1) 0%, rgba(92,64,146,1) 100%);
 }
+
+body {
+    margin: 0px;
+}
