Commit parcial authService Login

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,4 +4,5 @@
     <h2 class="title">DESTACADAS</h2>
     <app-benefit-slider></app-benefit-slider>
     <app-benefit-list></app-benefit-list>
+    <app-footer></app-footer>
 </div>
