--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,7 +1,7 @@
 <div>
     <p class="helloUser">¡Hola Roberto!</p>
-    <div class="backgroundUserPoints">
-        <div class="background-overlay"></div>
+    <div class="backgroundUserPoints rounded-md">
+        <div class="background-overlay rounded-md"></div>
         <div class="center-contents">
             <p class="points">2000</p>
             <p class="text">barpoints</p>
