--- a/src/app/components/business/business.component.html
+++ b/src/app/components/business/business.component.html
@@ -1,4 +1,8 @@
-<div>
-    <app-promotions></app-promotions>
-    <app-customers></app-customers>
+<div class="grid grid-cols-4 gap-4 h-screen">
+    <app-side-nav></app-side-nav>
+    <div class="w-7/8">
+        <app-dashboard></app-dashboard>
+        <app-promotions></app-promotions>
+        <app-customers></app-customers>
+    </div>
 </div>
