--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="">
     <app-nav-bar></app-nav-bar>
     <app-user></app-user>
-    <h2 class="title">DESTACADAS</h2>
+    <h2 class="title md:ml-7">DESTACADAS</h2>
     <app-benefit-slider></app-benefit-slider>
     <app-benefit-list></app-benefit-list>
     <app-footer></app-footer>
