--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,5 +1,5 @@
 <div>
-    <p class="helloUser">¡Hola Roberto!</p>
+    <p class="helloUser md: flex justify-center">¡Hola Roberto!</p>
     <div class="backgroundUserPoints rounded-md">
         <div class="background-overlay rounded-md"></div>
         <div class="center-contents">
