--- a/src/app/components/business/side-nav/side-nav.component.html
+++ b/src/app/components/business/side-nav/side-nav.component.html
@@ -1,3 +1,3 @@
-<div class="w-1/8 p-4 bg-violet-800 h-full">
+<div class="text-center">
     <img src="../../../assets/img/Logo - Bar.png" width="100" class="shadow-4" />
 </div>
