--- a/src/app/components/business/customers/customers.component.html
+++ b/src/app/components/business/customers/customers.component.html
@@ -10,6 +10,7 @@
         <ng-template pTemplate="caption">
             <div class="flex align-items-center justify-content-between">
                 CLIENTES
+                <app-transaction-popup class="mr-2"></app-transaction-popup>
                 <p-button icon="pi pi-refresh"></p-button>
             </div>
         </ng-template>
