--- a/src/app/components/faqs/faqs.component.css
+++ b/src/app/components/faqs/faqs.component.css
@@ -1,3 +1,6 @@
+.main-faqs-container {
+    background-color: rgba(255, 255, 255, 0.53);
+}
 .faqs-container {
     min-height: 78vh;
     display: flex;
@@ -36,14 +39,6 @@ h4 {
     justify-content: center;
 }
 ::ng-deep .p-component {
-    width: 95%;
-    /*
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; */
-}
-::ng-deep .p-component {
     font-family: 'Roboto', sans-serif !important;
     font-size: 16px !important;
 }
@@ -69,4 +64,28 @@ h4 {
 }
 app-footer {
     width: 100%;
+}
+
+@media(min-width: 768px) {
+    .main-faqs-container {
+        background: linear-gradient(0deg, rgba(234,84,147,1) 0%, rgba(92,64,146,1) 100%);
+    }
+    .title-container {
+        background-color: transparent;
+    }
+    .faqs-container {
+        background: rgba(0, 0, 0, 0.25);
+    }
+}
+
+@media(min-width: 992px) {
+    h2 {
+        font-size: 30px;
+    }
+    h3 {
+        font-size: 18px;
+    }
+    h4 {
+        font-size: 18px;
+    }
 }
