--- a/src/app/components/transaction-popup/transaction-popup.component.html
+++ b/src/app/components/transaction-popup/transaction-popup.component.html
@@ -1,17 +1,46 @@
 <p-button (click)="showDialog()" icon="pi pi-external-link" label="Transacción"></p-button>
 <p-dialog header="Transacción" [(visible)]="visible" [style]="{ width: '50vw' }">
     <div class="flex py-2 justify-content-center">
-        <form class="max-w-md mx-auto mt-8 p-4 border border-gray-300 rounded-lg">
-            <div class="p-field mb-4">
-              <label for="name" class="block font-semibold">Nombre</label>
-              <input id="name" type="text" pInput [(ngModel)]="formData.name" name="name" class="p-inputtext w-full border border-gray-300 rounded p-2">
+        <div class="max-w-md mx-auto p-4 border border-gray-300 rounded-lg">
+            <!-- Barra de búsqueda de cliente -->
+            <input [(ngModel)]="searchTerm" placeholder="Buscar Cliente" class="w-full mb-4" />
+            <button type="button" (click)="searchClient()">Buscar</button>
+
+            <!-- Aquí puedes mostrar los resultados de la búsqueda en una lista -->
+            <ul *ngIf="searchResults.length > 0">
+                <li *ngFor="let user of searchResults" (click)="selectedClient = user.username; onClientSelectionChange()">
+                    {{ user.username }}
+                </li>
+            </ul>
+
+            <!-- Selector de tipo de transacción (canje o suma de puntos) -->
+            <div class="mb-4">
+                <label for="transactionType" class="block font-semibold">Tipo de Transacción</label>
+                <select id="transactionType" [(ngModel)]="selectedTransactionType" name="selectedTransactionType"
+                    class="w-full border border-gray-300 rounded p-2">
+                    <option value="canje">Canje</option>
+                    <option value="sumaPuntos">Suma de Puntos</option>
+                </select>
             </div>
-            <div class="p-field mb-4">
-              <label for="email" class="block font-semibold">Correo Electrónico</label>
-              <input id="email" type="text" pInput [(ngModel)]="formData.email" name="email" class="p-inputtext w-full border border-gray-300 rounded p-2">
+
+            <!-- Selector de promoción o campo para puntos -->
+            <div class="mb-4" *ngIf="selectedTransactionType === 'canje'">
+                <label for="selectedPromotion" class="block font-semibold">Seleccionar Promoción</label>
+                <select id="selectedPromotion" [(ngModel)]="selectedPromotion" name="selectedPromotion"
+                    class="w-full border border-gray-300 rounded p-2">
+                    <!-- Aquí puedes cargar las opciones de promoción -->
+                </select>
             </div>
-            <button type="button" pButton (click)="guardarFormulario()" label="Guardar" class="p-button bg-blue-500 text-white py-2 px-4 rounded">
+            <div class="mb-4" *ngIf="selectedTransactionType === 'sumaPuntos'">
+                <label for="pointsToAdd" class="block font-semibold">Puntos a Sumar</label>
+                <input id="pointsToAdd" type="number" [(ngModel)]="pointsToAdd" name="pointsToAdd"
+                    class="w-full border border-gray-300 rounded p-2" />
+            </div>
+            <!-- Botón de Guardar -->
+            <button type="button" class="p-button bg-blue-500 text-white py-2 px-4 rounded"
+                (click)="guardarTransaccion()">
+                Guardar
             </button>
-          </form>          
+        </div>
     </div>
 </p-dialog>
