--- a/src/app/components/business/business.component.html
+++ b/src/app/components/business/business.component.html
@@ -1,8 +1,8 @@
 <div class="flex">
-    <div class="w-2 min-h-screen bg-violet-800 pt-4 items-center justify-center">
+    <div class="w-1 min-h-screen bg-violet-800 pt-4 items-center justify-center">
         <app-side-nav></app-side-nav>
     </div>
-    <div class="w-full min-h-screen bg-gray-100 flex flex-col"> 
+    <div class="min-h-screen bg-gray-50 flex flex-col"> 
         <app-dashboard></app-dashboard>
         <app-promotions></app-promotions>
         <app-customers></app-customers>
