--- a/src/app/components/business/customers/customers.component.html
+++ b/src/app/components/business/customers/customers.component.html
@@ -1,40 +1,41 @@
-<div class="text-center bg-gray-100">
-    <p-table 
-        [value]="customers"  
-        [(selection)]="selectedCustomers" 
-        dataKey="code" 
-        [tableStyle]="{'min-width': '60rem'}"
-        [rows]="10"
-        [paginator]="true"
-    >
-        <ng-template pTemplate="caption">
-            <div class="flex align-items-center justify-content-between">
-                CLIENTES
-                <app-transaction-popup class="mr-2"></app-transaction-popup>
-                <p-button icon="pi pi-refresh"></p-button>
-            </div>
-        </ng-template>
-        <ng-template pTemplate="header">
-            <tr>
-                <th style="width: 4rem">
-                    <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
-                </th>
-                <th>Nombre y Apellido</th>
-                <th>Información</th>
-                <th>Puntos</th>
-                <th>Acciones</th>
-            </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-customers>
-            <tr class="text-xl">
-                <td>
-                    <p-tableCheckbox [value]="customers"></p-tableCheckbox>
-                </td>
-                <td>{{customers.name}}</td>
-                <td>{{customers.information}}</td>
-                <td><span class="text-pink-600 font-normal">{{customers.points}}</span> puntos</td>
-                <td>Acciones</td>
-            </tr>
-        </ng-template>
-    </p-table>
+<div class="text-center bg-gray-50">
+    <div class="px-4">
+        <p-table 
+            [value]="customers"  
+            [(selection)]="selectedCustomers" 
+            dataKey="code" 
+            [rows]="10"
+            [paginator]="true"
+        >
+            <ng-template pTemplate="caption">
+                <div class="flex align-items-center justify-content-between">
+                    CLIENTES
+                    <app-transaction-popup class="mr-2"></app-transaction-popup>
+                    <p-button icon="pi pi-refresh"></p-button>
+                </div>
+            </ng-template>
+            <ng-template pTemplate="header">
+                <tr>
+                    <th style="width: 4rem">
+                        <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+                    </th>
+                    <th>Nombre y Apellido</th>
+                    <th>Información</th>
+                    <th>Puntos</th>
+                    <th>Acciones</th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-customers>
+                <tr class="text-xl">
+                    <td>
+                        <p-tableCheckbox [value]="customers"></p-tableCheckbox>
+                    </td>
+                    <td>{{customers.name}}</td>
+                    <td>{{customers.information}}</td>
+                    <td><span class="text-pink-600 font-normal">{{customers.points}}</span> puntos</td>
+                    <td>Acciones</td>
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
 </div>
