--- a/src/app/components/business/business.component.html
+++ b/src/app/components/business/business.component.html
@@ -5,6 +5,6 @@
     <div class="min-h-screen bg-gray-50 flex flex-col"> 
         <app-dashboard></app-dashboard>
         <app-promotions></app-promotions>
-        <app-customers></app-customers>
+        <app-customers [businessId]="businessId"></app-customers>
     </div>
 </div>
