Ajuste en business layout

--- a/src/app/components/business/dashboard/dashboard.component.html
+++ b/src/app/components/business/dashboard/dashboard.component.html
@@ -1,12 +1,18 @@
-<div class="w-full bg-{#F0F7F4}">
-    <div class="py-4 px-4">
-        <span class="text-black font-made-soulmaze text-2xl font-bold">DASHBOARD</span>
+<div class="flex-1 bg-teal-50 flex items-center justify-around pt-4">
+    <div class="w-48 h-28 flex-shrink-0 rounded-lg bg-white flex flex-col pt-3">
+        <span class="text-purple-700 font-roboto font-semibold text-5xl leading-tight pl-3">200</span>
+        <span class="text-pink-500 font-roboto font-bold text-sm pl-3">Total clientes</span>
     </div>
-    <div class="w-full h-px bg-gray-400"></div>
-    <div class="py-8 px-4 flex flex-row justify-center items-center">
-        <app-dashlet></app-dashlet>
-        <app-dashlet></app-dashlet>
-        <app-dashlet></app-dashlet>
-        <app-dashlet></app-dashlet>
+    <div class="w-48 h-28 flex-shrink-0 rounded-lg bg-white flex flex-col pt-3">
+        <span class="text-purple-700 font-roboto font-semibold text-5xl leading-tight pl-3">15</span>
+        <span class="text-pink-500 font-roboto font-bold text-sm pl-3">Total promos activas</span>
     </div>
+    <div class="w-48 h-28 flex-shrink-0 rounded-lg bg-white flex flex-col pt-3">
+        <span class="text-purple-700 font-roboto font-semibold text-5xl leading-tight pl-3">1000</span>
+        <span class="text-pink-500 font-roboto font-bold text-sm pl-3">Total puntos canjeados el último mes</span>
+    </div>
+    <div class="w-48 h-28 flex-shrink-0 rounded-lg bg-white flex flex-col pt-3">
+        <span class="text-purple-700 font-roboto font-semibold text-5xl leading-tight pl-3">300</span>
+        <span class="text-pink-500 font-roboto font-bold text-sm pl-3">Total puntos canjeados la última semana</span>
+    </div>            
 </div>
