--- a/src/app/components/business/side-nav/side-nav.component.html
+++ b/src/app/components/business/side-nav/side-nav.component.html
@@ -1,3 +1,9 @@
-<div class="text-center min-w-fit">
-    <img src="../../../assets/img/Logo - Bar.png" width="75" class="shadow-4"/>
+<div class="fixed text-center">
+    <img src="../../../assets/img/Logo - Bar.png" class="shadow-4 w-1/4 mx-auto sm:w-2/3 md:w-3/4 transition-slow hover-scale-110" />
+    <div class="flex flex-col items-center pt-8">
+        <i class="pi pi-user mb-6 text-white text-lg transition-slow hover-scale-125 cursor-pointer"></i>
+        <i class="pi pi-home mb-6 text-white text-lg transition-slow hover-scale-125 cursor-pointer"></i>
+        <i class="pi pi-users mb-6 text-white text-lg transition-slow hover-scale-125 cursor-pointer"></i>
+        <i class="pi pi-sign-out text-white text-lg transition-slow hover-scale-125 cursor-pointer"></i>
+    </div>
 </div>
